/*
 * $Id: ChangeLog,v 1.539 2002/12/20 19:41:39 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-12-20 11:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   + tests/mtcomplex.prg
     + Added demo with some more advanced MT features.

2002-12-20 11:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/inet.h
   * source/rtl/inet.c
     * Minor fixes for MSVC.

   * makefile.vc
   * makefile.nt
     + Added inet.c

2002-12-20 11:39 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/inet.h
     + Added missing defines.
   * makefile.bc
     + Added inet.c

2002-12-20 10:00 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/thread.h
    + Added guarded explict #define for _WIN32_WINNT 0x0400

  * source/vm/thread.c
    * Minor corrections related to HB_CRITICAL_LOCK()

  * bin/bld.bat
    * Added shell32.lib libs to MSVC section.

2002-12-20 01:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/thread.h
    - Temporarily commented out SignalObjectAndWait() because it's not avialable on all Win32s.
  * source/rtl/console.c
    * Modified all HB_MUTEX*() to HB_CRITICAL*()

2002-12-20 00:36 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/thread.h
  * source/vm/estack.c
  * source/vm/hvm.c
  * source/vm/thread.c
    * Restored Windows support.

2002-12-19 10:13 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
  * include/hbstack.h
  * include/thread.h
  * source/rdd/dbcmd.c
  * source/rdd/dbfcdx/dbfcdx1.c
  * source/rdd/dbfntx/dbfntx1.c
  * source/rtl/chrasc.c
  * source/rtl/do.c
  * source/rtl/errorapi.c
  * source/rtl/left.c
  * source/rtl/memofile.c
  * source/rtl/oemansi.c
  * source/rtl/setkey.c
  * source/rtl/str.c
  * source/rtl/transfrm.c
  * source/vm/arrays.c
  * source/vm/arrayshb.c
  * source/vm/asort.c
  * source/vm/classes.c
  * source/vm/codebloc.c
  * source/vm/debug.c