@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.539 2002/12/20 19:41:39 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.540 2002/12/20 21:22:57 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-12-20 20:15 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br)
+  * include/thread.h
+    * Fixed Problem on Some Macros on Linux Section of File(was missing the &
+    operator on some Macros)
 
 2002-12-20 11:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
    + tests/mtcomplex.prg
